--- a/public/404.html
+++ b/public/404.html
@@ -243,7 +243,7 @@
     </p>
 	</div>
 	<div class="buttons-container">
-		<a class="border-button" href="http://hugo.spf13.com/">Go To Homepage</a>
+		<a class="border-button" href="/">Go To Homepage</a>
 		<a class="border-button" href="mailto:Gwarre29@lakers.mercyhurst.edu">Report A Problem</a>
 	</div>
 </div>
